--- a/INSTALL
+++ b/INSTALL
@@ -1,7 +1,7 @@
 Thanks for downloading Weppy.
 
-To install it, make sure you have Python 3.3 or greater installed. Then run this
-command from the command prompt:
+To install it, make sure you have Python 2.7 installed. Then run this command
+from the command prompt:
 
     python setup.py install
 
