Fix upper cased 'weppy' words.

--- a/INSTALL
+++ b/INSTALL
@@ -1,4 +1,4 @@
-Thanks for downloading Weppy.
+Thanks for downloading weppy.
 
 To install it, make sure you have Python 2.7 installed. Then run this command
 from the command prompt:
